# cppgraphqlgen

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GraphQLGrammar.cpp  GraphQLGrammar.h  GraphQLResponse.cpp  GraphQLResponse.h  GraphQLService.cpp  GraphQLService.h  GraphQLTree.cpp  GraphQLTree.h  Introspection.cpp  Introspection.h  JSONResponse.cpp  JSONResponse.h  README.md  SchemaGenerator.cpp  SchemaGenerator.h  Today.cpp  Today.h  copy-windows-dlls.cmake  schema.today.graphql  test_today.cpp  tests.cpp  vcpkg.json
cmake/: CMakeLists.txt  ClientGen.rc.in  Generator.rc.in  Library.rc.in  SchemaGen.rc.in  Version.h.in  cppgraphqlgen-config.cmake  cppgraphqlgen-functions.cmake  cppgraphqlgen-update-client-files.cmake  cppgraphqlgen-update-schema-files.cmake  test_boost_beast.cpp  test_coroutine.cpp  test_coroutine.cpp.in  test_filesystem.cpp
samples/: CMakeLists.txt  IntrospectionSchema.cpp  IntrospectionSchema.h  TodaySchema.cpp  TodaySchema.h  mutate.today.graphql  query.today.graphql  schema.learn.graphql  schema.today.graphql  schema.validation.graphql  update_samples.cmake
samples/client/: BenchmarkClient.cpp  BenchmarkClient.h  CMakeLists.txt  MutateClient.cpp  MutateClient.h  QueryClient.cpp  QueryClient.h  SubscribeClient.cpp  SubscribeClient.h  benchmark.cpp
samples/introspection/: IntrospectionSchema.cpp  IntrospectionSchema.h
samples/learn/: CMakeLists.txt  DroidData.cpp  DroidData.h  DroidObject.cpp  DroidObject.h  HeroData.cpp  HeroData.h  HumanData.cpp  HumanData.h  HumanObject.cpp  HumanObject.h  MutationData.cpp  MutationObject.cpp  MutationObject.h  QueryData.cpp  QueryData.h  QueryObject.cpp  QueryObject.h  ReviewData.cpp  ReviewData.h  ReviewObject.cpp  ReviewObject.h  StarWarsData.cpp  StarWarsData.h  StarWarsObjects.h  StarWarsSchema.cpp  StarWarsSchema.h  SubscriptionData.cpp  SubscriptionData.h  sample.cpp
samples/proxy/: CMakeLists.txt  LICENSE  README.md  client.cpp  proxy.cpp  server.cpp
samples/separate/: AppointmentConnectionObject.cpp  AppointmentConnectionObject.h  AppointmentConnectionSchema.cpp  AppointmentEdgeObject.cpp  AppointmentEdgeObject.h  AppointmentEdgeSchema.cpp  AppointmentObject.cpp  AppointmentObject.h  AppointmentSchema.cpp  CompleteTaskPayloadObject.cpp  CompleteTaskPayloadObject.h  CompleteTaskPayloadSchema.cpp  CompleteTaskPayloadSchema.h  ExpensiveObject.cpp  ExpensiveObject.h  FolderConnectionObject.cpp  FolderConnectionObject.h  FolderConnectionSchema.cpp  FolderConnectionSchema.h  FolderEdgeObject.cpp  FolderEdgeObject.h  FolderEdgeSchema.cpp  FolderObject.cpp  FolderObject.h  FolderSchema.cpp  FolderSchema.h  MutationObject.cpp  MutationObject.h  MutationSchema.cpp  MutationSchema.h  NestedTypeObject.cpp  NestedTypeObject.h  NestedTypeSchema.cpp  PageInfoObject.cpp  PageInfoObject.h  PageInfoSchema.cpp  PageInfoSchema.h  QueryObject.cpp  QueryObject.h  QuerySchema.cpp  (+17 more)
samples/separate_nointrospection/: AppointmentConnectionObject.cpp  AppointmentConnectionObject.h  AppointmentEdgeObject.cpp  AppointmentEdgeObject.h  AppointmentObject.cpp  AppointmentObject.h  CompleteTaskPayloadObject.cpp  CompleteTaskPayloadObject.h  ExpensiveObject.cpp  ExpensiveObject.h  FolderConnectionObject.cpp  FolderConnectionObject.h  FolderEdgeObject.cpp  FolderEdgeObject.h  FolderObject.cpp  FolderObject.h  MutationObject.cpp  MutationObject.h  NestedTypeObject.cpp  NestedTypeObject.h  PageInfoObject.cpp  PageInfoObject.h  QueryObject.cpp  QueryObject.h  SubscriptionObject.cpp  SubscriptionObject.h  TaskConnectionObject.cpp  TaskConnectionObject.h  TaskEdgeObject.cpp  TaskEdgeObject.h  TaskObject.cpp  TaskObject.h  TodaySchema.cpp  TodaySchema.h
samples/separate_today/: AppointmentConnectionSchema.cpp  AppointmentConnectionSchema.h  AppointmentEdgeSchema.cpp  AppointmentEdgeSchema.h  AppointmentSchema.cpp  AppointmentSchema.h  CompleteTaskPayloadSchema.cpp  CompleteTaskPayloadSchema.h  FolderConnectionSchema.cpp  FolderConnectionSchema.h  FolderEdgeSchema.cpp  FolderEdgeSchema.h  FolderSchema.cpp  FolderSchema.h  MutationSchema.cpp  MutationSchema.h  NestedTypeSchema.cpp  NestedTypeSchema.h  PageInfoSchema.cpp  PageInfoSchema.h  QuerySchema.cpp  QuerySchema.h  SubscriptionSchema.cpp  SubscriptionSchema.h  TaskConnectionSchema.cpp  TaskConnectionSchema.h  TaskEdgeSchema.cpp  TaskEdgeSchema.h  TaskSchema.cpp  TaskSchema.h  Today.cpp  Today.h  TodaySchema.cpp  TodaySchema.h  today_schema_files
samples/star_wars/: DroidData.cpp  DroidData.h  HeroData.h  HumanData.cpp  HumanData.h  MutationData.cpp  MutationData.h  QueryData.cpp  QueryData.h  ReviewData.cpp  ReviewData.h  StarWarsData.cpp  StarWarsData.h
samples/stitched/: CMakeLists.txt  StitchedSchema.cpp  StitchedSchema.h  sample.cpp
samples/today/: CMakeLists.txt  SeparateToday.cpp  SeparateToday.h  Today.h  TodayMock.cpp  TodayMock.h  TodayMock.ixx  TodaySchema.cpp  TodaySchema.h  UnifiedToday.cpp  UnifiedToday.h  benchmark.cpp  sample.cpp  schema.today.graphql
samples/unified/: TodaySchema.cpp  TodaySchema.h
samples/unified_nointrospection/: TodaySchema.cpp  TodaySchema.h
samples/validation/: CMakeLists.txt  ValidationMock.cpp  ValidationMock.h  ValidationSchema.cpp  ValidationSchema.h
src/: Base64.cpp  CMakeLists.txt  ClientGenerator.cpp  GeneratorLoader.cpp  GeneratorUtil.cpp  GraphQLClient.cpp  GraphQLError.cpp  GraphQLResponse.cpp  GraphQLSchema.cpp  GraphQLService.cpp  GraphQLTree.cpp  GraphQLValidation.cpp  Introspection.cpp  IntrospectionSchema.cpp  JSONResponse.cpp  RapidJSONResponse.cpp  RequestLoader.cpp  Schema.cpp  SchemaGenerator.cpp  SchemaLoader.cpp  SyntaxTree.cpp  TaoCppJSONResponse.cpp  Validation.cpp
src/introspection/: CMakeLists.txt  DirectiveObject.cpp  DirectiveObject.h  DirectiveObject.ixx  EnumValueObject.cpp  EnumValueObject.h  EnumValueObject.ixx  (+18 more)
test/: ArgumentTests.cpp  CMakeLists.txt  ClientTests.cpp  CoroutineTests.cpp  NoIntrospectionTests.cpp  PegtlCombinedTests.cpp  PegtlExecutableTests.cpp  PegtlSchemaTests.cpp  PegtlTests.cpp  ResponseTests.cpp  TodayTests.cpp  ValidationTests.cpp  tests.cpp
(+452 files in other folders)
